--- a/Style.css
+++ b/Style.css
@@ -160,3 +160,29 @@
             color: white;
             border: 2px solid #aeb6bd;
         }
+         #trendingwordmeanings{
+    
+  }
+  #Wordssearch{
+    width: 450px;
+    font-size: 20px;
+    height: 30px;
+    align-content: center;
+    color: #130b0b36;
+  }
+  h6{
+      text-decoration: Bold;
+      font-size: 30px;
+      text-align: center;
+    
+  }
+  #Wordmeaningsid{
+                  background-color:antiquewhite ;
+  
+  }
+  .Buttonsofsearch{
+    width: 33px;
+    display: inline;
+    height: 28px;
+    background-color:rgb(0,0,0);
+  }
