--- a/Style.css
+++ b/Style.css
@@ -1,188 +1,204 @@
 * {
-            margin: 0;
-            padding: 0;
-        }
+    margin: 0;
+    padding: 0;
+}
 
-        body {
-            background-color: antiquewhite;
-        }
+body {
+    background-color: violet;
+}
 
-        ul {
-            display: flex;
-            justify-content: start;
-        }
+/* nav{
+    height: 88px;
+} */
+ul {
+    display: flex;
+    justify-content: start;
+}
 
-        ul li {
-            list-style: none;
-            color: #130b0b36;
-            padding: 9px;
-            font-size: 34px;
-        }
+ul li {
+    list-style: none;
+    color: #130b0b36;
+    padding: 9px;
+    font-size: 34px;
+}
 
-        #search {
-            width: 625px;
-            height: 41px;
-            border-color: #130b0b36;
-            border-radius: 10px;
-            padding-left: 10px;
-            margin-left: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 3px;
+#search {
+    width: 625px;
+    height: 41px;
+    border: white;
+    /* border-radius: 10px; */
+    padding-left: 10px;
+    margin-left: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 
-        }
+}
 
-        .button button {
-            background-color: white;
-            height: 44px;
-            width: 70px;
-        }
+.button button {
+    background-color: white;
+    height: 44px;
+    width: 70px;
+}
 
-        .button button:hover {
-            cursor: pointer;
-        }
+.button button:hover {
+    cursor: pointer;
+}
 
-        .button {
-            padding: 5px 35px;
-        }
+.button {
+    padding: 5px 11px;
+}
 
-        .type {
-            padding: 5px 11px;
-        }
+.type {
+    padding: 5px 11px;
+}
 
-        .type button {
-            background-color: white;
-            height: 44px;
-            width: 66px;
-        }
+.type button {
+    background-color: white;
+    height: 40px;
+    width: 66px;
+    margin: 10px;
+    border: white;
+}
 
-        .type button:hover {
-            cursor: pointer;
-        }
+.type button:hover {
+    cursor: pointer;
+}
 
-        #hot {
-            color: #e34949;
-            margin-left: 62px;
-        }
+#hot {
+    color: #fff;
+    margin-left: 43px;
+    font-size: 45px;
+    font-weight: bolder;
+}
 
-        nav {
-            background-color: #3ebcd9;
-            border: 2px solid grey;
-            border-radius: 5px;
-        }
+nav {
+    width: 100%;
+    height: 75px;
+    background-color: #33c0a6;
+    /* border: 2px solid grey;
+    border-radius: 5px; */
+}
 
-        #but1 {
-            border-radius: 10px;
-            height: 41px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 3px;
-        }
+#but1 {
+    /* border-radius: 10px; */
+    height: 41px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border: white;
+}
 
-        #but2 {
-            border-radius: 10px;
-            height: 41px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 3px;
-        }
+#but2 {
+    /* border-radius: 10px; */
+    height: 41px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border: white;
+}
 
-        .container1 {
-            border: 2px solid rgb(71, 39, 232);
-            width: 19%;
-            height: 103px;
-            display: inline-block;
-            margin: 61px 284px 10px 190px;
-            text-align: center;
-            padding: 15px;
-            background-color: #6df5c2;
-            border-radius: 10px;
-        }
+.container1 {
+    border: 2px solid rgb(71, 39, 232);
+    width: 19%;
+    height: 103px;
+    display: inline-block;
+    margin: 61px 284px 10px 190px;
+    text-align: center;
+    padding: 15px;
+    background-color: #6df5c2;
+    border-radius: 10px;
+}
 
-        .container2 {
-            border: 2px solid rgb(71, 39, 232);
-            width: 19%;
-            height: 103px;
-            display: inline-block;
-            text-align: center;
-            padding: 15px;
-            background-color: #6df5c2;
-             border-radius: 10px;
-        }
+.container2 {
+    border: 2px solid rgb(71, 39, 232);
+    width: 19%;
+    height: 103px;
+    display: inline-block;
+    text-align: center;
+    padding: 15px;
+    background-color: #6df5c2;
+    border-radius: 10px;
+}
 
-        .container3 {
-            border: 2px solid rgb(71, 39, 232);
-            width: 19%;
-            height: 103px;
-            display: inline-block;
-            margin: 61px 116px 10px 190px;
-            text-align: center;
-            padding: 15px;
-            background-color: #6df5c2;
-             border-radius: 10px;
-        }
+.container3 {
+    border: 2px solid rgb(71, 39, 232);
+    width: 19%;
+    height: 103px;
+    display: inline-block;
+    margin: 61px 116px 10px 190px;
+    text-align: center;
+    padding: 15px;
+    background-color: #6df5c2;
+    border-radius: 10px;
+}
 
-        .container4 {
-            position: relative;
-            right: 158px;
-            border: 2px solid rgb(71, 39, 232);
-            width: 19%;
-            height: 103px;
-            float: right;
-            text-align: center;
-            padding: 15px;
-            margin: 61px 237px 10px 129px;
-            background-color: #6df5c2;
-             border-radius: 10px;
-        }
+.container4 {
+    position: relative;
+    right: 158px;
+    border: 2px solid rgb(71, 39, 232);
+    width: 19%;
+    height: 103px;
+    float: right;
+    text-align: center;
+    padding: 15px;
+    margin: 61px 237px 10px 129px;
+    background-color: #6df5c2;
+    border-radius: 10px;
+}
 
-        a {
-            text-decoration: none;
-            font-size: 18px;
-            color: rgb(71, 39, 232);
-        }
+a {
+    text-decoration: none;
+    font-size: 18px;
+    color: rgb(71, 39, 232);
+}
 
-        h2 {
-            padding: 18px;
-        }
-        main{
-            min-height: calc(100vh - 44px - 10vh);
-        }
-        #footer{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #130b0b36;
-            height: 10vh;
-            color: white;
-            border: 2px solid #aeb6bd;
-        }
-         #trendingwordmeanings{
-    
-  }
-  #Wordssearch{
+h2 {
+    padding: 18px;
+}
+
+main {
+    min-height: calc(100vh - 75px - 17vh);
+}
+
+#footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #33c0a6;
+    height: 17vh;
+    color: white;
+    border: 2px solid #aeb6bd;
+}
+
+/* #trendingwordmeanings {} */
+
+#Wordssearch {
     width: 450px;
     font-size: 20px;
     height: 30px;
     align-content: center;
     color: #130b0b36;
-  }
-  h6{
-      text-decoration: Bold;
-      font-size: 30px;
-      text-align: center;
-    
-  }
-  #Wordmeaningsid{
-                  background-color:antiquewhite ;
-  
-  }
-  .Buttonsofsearch{
+}
+
+h6 {
+    text-decoration: Bold;
+    font-size: 30px;
+    text-align: center;
+
+}
+
+#Wordmeaningsid {
+    background-color: antiquewhite;
+
+}
+
+.Buttonsofsearch {
     width: 33px;
     display: inline;
     height: 28px;
-    background-color:rgb(0,0,0);
-  }
+    background-color: rgb(0, 0, 0);
+}
